<resources>
    <string name="app_name">PeliharaanApp</string>
    <string name="log_in">LOG IN</string>
    <string name="tidak_punya_akun">Tidak Punya Akun ?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="halo">Halo</string>
    <string name="add_pet">Add Pet</string>
    <string name="pet_name">Name Hewan</string>
    <string name="pet_type">Type Hewan</string>
    <string name="pet_birth">Tanggal Lahir Hewan</string>
    <string name="not_empty_text">Tidak Boleh Kosong</string>
    <string name="update_pet">update pet</string>
    <string name="add_pet_activity">add activity</string>
    <string name="title_activity_add">AddActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="type_aktifitas">Type Aktifitas</string>
    <string name="notes_activity">Notes Aktifitas</string>
    <string name="date_aktifitas">Tanggal Aktifitas</string>
    <string name="edit_pet_activity">edit activity</string>
    <string name="title_activity_vaksin">VaksinActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_pet_vaksin">add vaksin</string>
    <string name="nama_vaksin">Nama Vaksin</string>
    <string name="tanggal_vaksin">Tanggal Vaksin</string>
    <string name="delete">Delete</string>
</resources>